<resources>
  <string name="app_name">Review Community</string>

  <string name="create">Create</string>
  <string name="name">Name</string>
  <string name="category">Category</string>
  <string name="save">Save</string>
  <string name="authentication_required">Login required</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="unauthenticated_username">[Anonymous]</string>
  <string name="sign_in">Sign in</string>
  <string name="username_or_email">Username</string>
  <string name="password">Password</string>
  <string name="sign_up">Sign up</string>
  <string name="username">Username</string>
  <string name="register_email">E-Mail (optional)</string>
  <string name="confirm_password">Confirm Password</string>

  <string name="search">Search</string>
  <string name="search_hint">Search products&#8230;</string>

  <string name="barcode_not_found">Product not found</string>
  <string name="barcode_not_found_message">
    There is no entry for this product or it hasn\'t been associated with this barcode yet.
    You can create an entry for this product if you are signed in.
  </string>
  <string name="barcode_not_found_message_create">
    There is no entry for this product or it hasn\'t been associated with this barcode yet.
    Do you want to create an entry for this product? You can also mark this product as out of
    the scope of this community.
  </string>
  <string name="out_of_scope">Out of Scope</string>
  <string name="out_of_scope_message">This product is not in the scope of this community</string>

  <string name="select_category_placeholder">&lt;Select Category&gt;</string>
  <string name="select_brand_placeholder">&lt;Select Brand&gt;</string>
  <string name="edit_product_brand">Brand (optional)</string>
  <string name="edit_product_description">Description (optional)</string>
  <string name="edit_product_barcode">Barcode (optional)</string>
  <string name="scan_barcode">Scan Barcode</string>
  <string name="clear_barcode">Clear Barcode</string>
  <string name="create_product_auth">You need to sign in to add a new product.</string>
  <string name="create_product_success">Product has been added</string>

  <string name="review_vote_auth">You need to sign in to vote on reviews.</string>
</resources>
